manifests/ping-pong/no-pv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercises
  name: shared-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-app-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output-app-svc
                port:
                  number: 80
